--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "nodemon --inspect src/index.js",
+        "beautiful": "prettier --single-quote --tab-width 4 --trailing-comma all --write 'src/**/*.{js,json,scss}'",
         "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -17,6 +18,14 @@
         "url": "https://github.com/nyatto03/nodejs_blog/issues"
     },
     "homepage": "https://github.com/nyatto03/nodejs_blog#readme",
+    "lint-staged": {
+        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
     "description": "",
     "dependencies": {
         "express": "^4.19.2",
@@ -24,6 +33,9 @@
         "node-sass": "^9.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.4"
+        "husky": "^9.1.4",
+        "lint-staged": "^15.2.9",
+        "nodemon": "^3.1.4",
+        "prettier": "^3.3.3"
     }
 }
