--- a/package.json
+++ b/package.json
@@ -18,14 +18,6 @@
         "url": "https://github.com/nyatto03/nodejs_blog/issues"
     },
     "homepage": "https://github.com/nyatto03/nodejs_blog#readme",
-    "lint-staged": {
-        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 8 --write"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
     "description": "",
     "dependencies": {
         "express": "^4.19.2",
@@ -33,9 +25,6 @@
         "node-sass": "^9.0.0"
     },
     "devDependencies": {
-        "husky": "^9.1.4",
-        "lint-staged": "^15.2.9",
-        "nodemon": "^3.1.4",
-        "prettier": "^3.3.3"
+        "nodemon": "^3.1.4"
     }
 }
