--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "express": "^4.19.2",
         "express-handlebars": "^8.0.1",
+        "mongoose": "^8.5.3",
         "node-sass": "^9.0.0"
     },
     "devDependencies": {
