--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "dependencies": {
         "express": "^4.19.2",
         "express-handlebars": "^8.0.1",
-        "mongoose": "^8.5.3",
+        "method-override": "^3.0.0",
+        "mongoose": "^5.9.27",
+        "mongoose-delete": "^0.5.2",
+        "mongoose-sequence": "^6.0.1",
+        "mongoose-slug-generator": "^1.0.4",
         "node-sass": "^9.0.0"
     },
     "devDependencies": {
