--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "mongoose-delete": "^0.5.2",
         "mongoose-sequence": "^6.0.1",
         "mongoose-slug-generator": "^1.0.4",
+        "morgan": "^1.10.0",
         "node-sass": "^9.0.0"
     },
     "devDependencies": {
